--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset= "utf-8" />
         <title>Opal-Pixi</title>
         <link rel="stylesheet" href="/style.css">
-        <script src="/pixi.js"></script>
-        <script src="/assets/demo.js"></script>
+        <script src="pixi.js"></script>
+        <script src="assets/demo.js"></script>
     </head>
 
     <body>
